# quickremember

./: README.md  pyproject.toml  setup.py
quickremember/: __init__.py
remember/: consts.py  forget.py
src/: remember.py
